Checked and corrected teleporter Old Prototype scene is deleted, old Demo scene is now Prototype, new Demo scene is for vertical sclice Fixed save data not saving box upgrade Extended prototype scene to fit teleporter UI adjusted and optimised

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\PowerUp.cs" />
     <Compile Include="Assets\Scripts\StandardEnemy.cs" />
+    <Compile Include="Assets\Scripts\Teleporter.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/Jared Chew/Documents/Unity Projects/GPS1/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
